# praxis

./: .containerignore  Cargo.toml  Containerfile  Containerfile.test  Containerfile.test.dockerignore  LICENSE  Makefile  README.md  SECURITY.md
benchmarks/: Cargo.toml
benchmarks/benches/: common.rs  condition_eval.rs  config_parsing.rs  filter_pipeline.rs  headers.rs  load_balancer.rs  router_lookup.rs
benchmarks/comparison/: docker-compose.yml
benchmarks/comparison/configs/: envoy.yaml  haproxy.cfg  nginx.conf  praxis-local.yaml  praxis.yaml
benchmarks/microbenchmarks/: common.rs  condition_eval.rs  config_parsing.rs  filter_pipeline.rs  headers.rs  load_balancer.rs  router_lookup.rs
benchmarks/src/: error.rs  lib.rs  net.rs  proxy.rs  report.rs  result.rs  runner.rs  scenario.rs  stats.rs
benchmarks/src/proxy/: envoy.rs  haproxy.rs  mod.rs  nginx.rs  praxis.rs
benchmarks/src/scenario/: mod.rs  settings.rs  workload.rs
benchmarks/src/tools/: fortio.rs  mod.rs  vegeta.rs
core/: Cargo.toml
core/src/: errors.rs  health.rs  lib.rs  logging.rs
core/src/config/: admin.rs  body_limits.rs  bootstrap.rs  branch_chain.rs  chain_ref.rs  filter_chain.rs  filters.rs  insecure_options.rs  listener.rs  loader.rs  mod.rs  parse.rs  pipeline.rs  route.rs  runtime.rs
core/src/config/cluster/: endpoint.rs  health_check.rs  load_balancer_strategy.rs  mod.rs
core/src/config/condition/: mod.rs  request.rs  response.rs
core/src/config/validate/: branch_chain.rs  cluster.rs  filter_chain.rs  listener.rs  mod.rs  route.rs  rules.rs
core/src/config/validate/cluster/: endpoints.rs  health_check.rs  mod.rs  timeouts.rs  tls.rs
core/src/config/validate/listener/: address.rs  mod.rs  rules.rs  timeouts.rs
core/src/connectivity/: cidr.rs  connection_options.rs  mod.rs  network.rs  upstream.rs
core/src/server/: mod.rs  pingora.rs  runtime.rs
filter/: Cargo.toml
filter/src/: actions.rs  any_filter.rs  context.rs  factory.rs  filter.rs  lib.rs  registry.rs  results.rs  tcp_filter.rs
filter/src/body/: access.rs  buffer.rs  builder.rs  mod.rs  mode.rs
filter/src/builtins/: mod.rs
filter/src/builtins/http/: mod.rs  net.rs
filter/src/builtins/http/ai/: mod.rs
filter/src/builtins/http/observability/: access_log.rs  mod.rs  request_id.rs
filter/src/builtins/http/payload_processing/: compression.rs  compression_config.rs  mod.rs
filter/src/builtins/http/security/: forwarded_headers.rs  ip_acl.rs  mod.rs
filter/src/builtins/http/traffic_management/: mod.rs  redirect.rs  static_response.rs  timeout.rs  token_bucket.rs
filter/src/builtins/http/transformation/: mod.rs  path_sanitize.rs  url_rewrite.rs
filter/src/builtins/tcp/: mod.rs
filter/src/builtins/tcp/observability/: mod.rs  tcp_access_log.rs
filter/src/builtins/tcp/traffic_management/: mod.rs  sni_router.rs  tcp_load_balancer.rs
filter/src/condition/: mod.rs  request.rs  response.rs
filter/src/load_balancing/: consistent_hash.rs  endpoint.rs  least_connections.rs  mod.rs  round_robin.rs  strategy.rs
filter/src/pipeline/: body.rs  branch.rs  build.rs  build_branch.rs  checks.rs  clusters.rs  evaluate.rs  filter.rs  http.rs  http_utils.rs  mod.rs  tcp.rs  tests.rs
proto/: Cargo.toml  build.rs
proto/proto/: envoy_common.proto  ext_proc.proto
proto/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  pipelines.rs  tls_setup.rs
protocol/src/http/: mod.rs
protocol/src/http/pingora/: context.rs  convert.rs  health.rs  health_check_probe.rs  health_check_runner.rs  json.rs  listener.rs  metrics.rs  mod.rs
protocol/src/http/pingora/handler/: hop_by_hop.rs  mod.rs  no_body.rs  normalize.rs  request_body_filter.rs  request_filter.rs  response_body_filter.rs  response_filter.rs  upstream_peer.rs  upstream_request.rs  upstream_response.rs  via.rs  with_body.rs
protocol/src/http/pingora/health/: mod.rs  probe.rs  runner.rs  service.rs
protocol/src/http3/: mod.rs
protocol/src/tcp/: mod.rs  proxy.rs  tls_setup.rs
protocol/src/udp/: mod.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  pipelines.rs  server.rs
tests/integration/: Cargo.toml
tests/integration/tests/suite/: body.rs  body_pipeline.rs  compression.rs  conditions.rs  cors.rs  downstream_read_timeout.rs  failure_mode.rs  filter_composition.rs  guardrails.rs  health_check.rs  hot_reload.rs  ip_acl.rs  json_body_field.rs  json_rpc.rs  main.rs  path_rewrite.rs  payload_processing.rs  per_listener_pipeline.rs  rate_limit.rs  retry.rs  routing.rs  security.rs  sni_router.rs  tcp_access_log.rs  tcp_load_balancer.rs  tls.rs  url_rewrite.rs  websocket.rs  wildcard_routing.rs
tests/integration/tests/suite/adversarial/: header_smuggling.rs  host_header.rs  ipv6_bypass.rs  mod.rs  path_traversal.rs  rate_limit_bypass.rs
tests/integration/tests/suite/common/: mod.rs
tests/integration/tests/suite/examples/: access_logging.rs  admin_interface.rs  api_key_filter.rs  basic_reverse_proxy.rs  canary_routing.rs  circuit_breaker.rs  conditional_filters.rs  (+28 more)
tests/performance/: Cargo.toml
tests/performance/tests/suite/: body_processing.rs  filter_chain.rs  helpers.rs  main.rs  production_pipeline.rs  simple_proxy.rs  tcp_proxy.rs
tests/security/: Cargo.toml
tests/security/tests/suite/: common.rs  filter_leakage.rs  forwarded_headers.rs  header_injection.rs  host_header.rs  info_leakage.rs  ip_acl.rs  main.rs  request_smuggling.rs
tests/smoke/: Cargo.toml
tests/smoke/tests/suite/: main.rs  smoke.rs
tests/utils/: Cargo.toml
tests/utils/src/: backend.rs  example_config.rs  http_client.rs  lib.rs  network.rs  proxy.rs
tests/utils/src/net/: http_client.rs  mod.rs  port.rs  tls.rs  wait.rs
tls/: Cargo.toml
tls/src/: cached.rs  client_auth.rs  config.rs  error.rs  lib.rs  reload.rs  sni.rs  test_utils.rs  watcher.rs
tls/src/config/: certs.rs  cluster.rs  listener.rs  mod.rs
tls/src/setup/: loader.rs  mod.rs  sni.rs
xtask/: Cargo.toml
xtask/src/: debug.rs  echo.rs  main.rs  port.rs
xtask/src/benchmark/: cli.rs  compare.rs  flamegraph.rs  mod.rs  orchestrate.rs  proxy.rs  report.rs  resolve.rs  visualize.rs
(+280 files in other folders)
