[package]
name = "praxis-proxy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Configuration and core types for the Praxis proxy"
license.workspace = true
repository.workspace = true

[lib]
name = "praxis_core"

[lints]
workspace = true

[dependencies]
pingora-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
