[package]
name = "praxis-proxy-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Filter pipeline engine and built-in filters for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = true

[lib]
name = "praxis_filter"

[features]
default = ["ai-inference", "ext-proc"]
ai-inference = []
ext-proc = ["dep:praxis-proto", "dep:tonic", "dep:prost-wkt-types"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
praxis-core = { workspace = true }
praxis-proto = { workspace = true, optional = true }
prost-wkt-types = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
