[package]
name = "praxis-proxy-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Protobuf and gRPC definitions for Praxis external processing"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[lib]
name = "praxis_proto"

# Workspace lints are not inherited: this crate wraps generated protobuf code
# that cannot satisfy the strict style rules applied to hand-written code.
# Lint suppression is handled by crate-level `#![allow(...)]` attributes in
# lib.rs instead.
[lints.rust]
unsafe_code = "deny"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-wkt-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
prost-wkt-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }
