[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
plotters = { workspace = true }
praxis = { workspace = true }
praxis-benchmarks = { workspace = true }
praxis-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "net", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
