[package]
name = "praxis-tests-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
praxis = { workspace = true }
praxis-core = { workspace = true }
praxis-test-utils = { workspace = true }
